2006-01-09  Rodrigo Moya <rodrigo@novell.com>

	Fixes #326141

	* drwright.c (popup_preferences_cb):
	* egg-spawn.[ch]:
	* Makefile.am: kill egg_spawn_* functions, use gdk_spawn_* instead.

2005-11-27  Richard Hult  <richard@imendio.com>

	* main.c: (main): Don't display a dialog when the monitor is
	already running, that's an old remain from when drwright was a
	standalone app. Fixes bug #307425.

	* drw-break-window.c:
	* drwright.c: (popup_break_cb): Use stock icon from GTK+ instead
	of libgnomeui and use i18n includes from glib. Fixes bug #171664.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* drw-selection.h: ANSIfy function declaration.

2005-10-07  Rodrigo Moya <rodrigo@novell.com>

	Fixes #318231

	* eggtrayicon.[ch]: updated to latest eggtrayicon code, to fix weird
	spacing between icons.

2005-08-18  Rodrigo Moya <rodrigo@novell.com>

	* drw-break-window.c (drw_break_window_dispose): fixed leaked timer.

2005-02-04  Richard Hult  <richard@imendio.com>

	* drwright.c: Revert the patch from below since it fixes #134595
	but breaks other things. Keep the tooltip changes though.

	* main.c (main): Update description on how to add notification
	area for the new "add to panel" dialog. Patch from uid0@akl.lt,
	fixes bug #166057.

2005-02-03  Richard Hult  <richard@imendio.com>

	* drwright.c (break_window_postpone_cb), (maybe_change_state),
	(popup_break_cb): Go back to the timer value from before the break
	if postponing a manual break. Fixes bug #134595, based on patch
	from Vinay M R <vinay.mandyakoppal@wipro.com>. Modified to use the
	right enum type and changed to update the tooltip immendiately
	after a break.

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* drw-selection.c: (drw_selection_start): ANSIfication.
	* drwright.c: NULL vs. 0

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-10-14  Richard Hult  <richard@imendio.com>

	* drw-break-window.c (drw_break_window_init): Remove unecessary